[project]
name = "llm-litellm"
version = "0.4.1"
description = "LLM plugin for models hosted by LiteLLM"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "llm>=0.23",
    "httpx",
    "openai>=1.57.0",
]

[project.urls]
Homepage = "https://github.com/simonw/llm-litellm"
Changelog = "https://github.com/simonw/llm-litellm/releases"
Issues = "https://github.com/simonw/llm-litellm/issues"
CI = "https://github.com/simonw/llm-litellm/actions"

[project.entry-points.llm]
litellm = "llm_litellm"

[project.optional-dependencies]
test = ["pytest", "pytest-recording", "inline-snapshot"]
